Bug 139696 - UI: Anchor drop down button not working properly in Tabbed mode (click doesn't expand like toolbar)
Summary: UI: Anchor drop down button not working properly in Tabbed mode (click doesn'...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Anchor-and-Text-Wrap
  Show dependency treegraph
 
Reported: 2021-01-17 09:58 UTC by Telesto
Modified: 2021-01-29 12:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-01-17 09:58:43 UTC
Description:
UI: Anchor drop down button not working properly in Tabbed mode (click doesn't expand like toolbar)

Steps to Reproduce:
1. Open Writer
2. insert an object (shape/image)
3. Click the anchor button in regular toolbar (not on arrow down).. Expands
4. Do the same in tabbed mode.. Big button doing nothing

Actual Results:
Left click does nothing.. you need to click to drop down arrow

Expected Results:
Should work as in toolbar


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: f2171af6ce3516598d9f8bac8294025a21a5b1a2
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Heiko Tietze 2021-01-20 09:20:23 UTC
Yes, it's just the tiny button at right that opens the menu. It's the same for other controls such as Border Color but not Border. Maxim, Andreas: What can we do?
Comment 2 Maxim Monastirsky 2021-01-20 18:36:19 UTC
Let's try with https://gerrit.libreoffice.org/c/core/+/109722
Comment 3 Heiko Tietze 2021-01-21 09:01:08 UTC
(In reply to Maxim Monastirsky from comment #2)
> Let's try with https://gerrit.libreoffice.org/c/core/+/109722

LGTM

(In reply to Heiko Tietze from comment #1)
> the same for other controls such as Border Color
This is wrong, the border color is set directly at the image
Comment 4 Commit Notification 2021-01-21 10:31:58 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da2b2c9b3d2b3165f237cdde589f44e7d19a2bc0

tdf#139696 Use getToolboxId to set item id

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.